# pdoc_sample

./: README.md  main.py  pyproject.toml
.github/workflows/: pdoc.yml
docs/: index.html  main.html  search.js
